--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
     </div>
 <!-- Fine header -->
 
+<!-- inizio main -->
+<!-- fine main-->
+
+<!-- inizio footer-->
+<!-- fine footer-->
+
 </body>
 </html>
