--- a/index.html
+++ b/index.html
@@ -16,6 +16,49 @@
 <!-- Fine header -->
 
 <!-- inizio main -->
+<div>
+    <h1>Internet deve essere al servizio del "bene pubblico": il manifesto
+        di Tim Berners-Lee
+    </h1>
+    <p class="testo1">Scritto da<span class="testo2">The Booleaner</span></p>
+    <p class="testo3">il 10/10/2020</p>
+</div>
+
+<div>
+    <img src="img/tim-1.jpg" alt="il tipo">
+    <img src="img/tim-2.jpg" alt="lo stesso tipo">
+    
+    <div class="testo4">
+        <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+        <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+    </div>  
+</div>
+
+<div class="paragrafo">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus 
+        posuere, porta metus at, gravida erat. Integer id arcu tincidunt, tincidunt 
+        dui quis, sodales lacus. Etiam at urna non turpis congue convallis non vitae 
+        tortor. Ut in neque ex. <span class="testo5">Proin maximus fringilla leo ut porttitor. Nunc sed 
+        sollicitudin eros, sit amet condimentum velit.</span> Morbi sagittis est vitae 
+        massa euismod pretium. Cras a enim nibh. Nunc lectus urna, malesuada ac 
+        venenatis eget, tempor vel metus. Cras vulputate erat arcu, accumsan 
+        venenatis enim porttitor vel. Mauris tristique scelerisque nulla, non 
+        imperdiet purus cursus ac. Donec cursus eros eu augue imperdiet, eget 
+        interdum dolor pretium. Duis egestas sapien sapien, vitae auctor sem 
+        auctor vel. Quisque vitae rutrum ipsum, vitae gravida est. Phasellus 
+        porta dolor cursus, consequat nisi ac, bibendum libero.</p>
+</div>
+
+<div>
+    <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus 
+            posuere, porta metus at, gravida erat.</li>
+        <li>Morbi sagittis est vitae 
+            massa euismod pretium. Cras a enim nibh. Nunc lectus urna,</li>
+        <li>Phasellus 
+            porta dolor cursus, consequat nisi ac, bibendum libero.</li>
+    </ul>
+</div>
 <!-- fine main-->
 
 <!-- inizio footer-->
