--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 
 <div>
-    <ul>
+   <ul class="paragrafo">
         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus 
             posuere, porta metus at, gravida erat.</li>
         <li>Morbi sagittis est vitae 
@@ -59,10 +59,76 @@
             porta dolor cursus, consequat nisi ac, bibendum libero.</li>
     </ul>
 </div>
-<!-- fine main-->
 
-<!-- inizio footer-->
-<!-- fine footer-->
+<div>
+    <table>
+        <!--intestazione tabella-->
+        <thead class="testa_tabella">
+            <th class="colonna-25">Lorem ipsum dolor</th>
+            <th class="colonna-25">Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+        </thead>
+
+        <!--corpo tabella-->
+        <tbody>
+            <tr class="corpo_tabella">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Morbi sagittis est vitae 
+                    massa euismod pretium. Cras a enim nibh. Nunc lectus urna, malesuada ac 
+                    venenatis eget, tempor vel metus. Cras vulputate erat arcu, accumsan 
+                    venenatis enim porttitor vel.</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Morbi sagittis est vitae 
+                    massa euismod pretium. Cras a enim nibh. Nunc lectus urna, malesuada ac 
+                    venenatis eget, tempor vel metus. Cras vulputate erat arcu, accumsan 
+                    venenatis enim porttitor vel.</td>
+            </tr>
+        </tbody>
+        <!-- fine corpo tabella -->
+
+        <!-- inizio footer-->
+        <tfoot>
+            <tr class="corpo_tabella">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Morbi sagittis est vitae 
+                    massa euismod pretium. Cras a enim nibh. Nunc lectus urna, malesuada ac 
+                    venenatis eget, tempor vel metus. Cras vulputate erat arcu, accumsan 
+                    venenatis enim porttitor vel.</td>
+            </tr>
+        </tfoot>
+        <!-- fine footer-->
+    </table>
+</div>
+
+<div class="paragrafo">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus 
+        posuere, porta metus at, gravida erat. Integer id arcu tincidunt, tincidunt 
+        dui quis, sodales lacus. Etiam at urna non turpis congue convallis non vitae 
+        tortor. Ut in neque ex. Proin maximus fringilla leo ut porttitor. Nunc sed 
+        sollicitudin eros, sit amet condimentum velit. Morbi sagittis est vitae 
+        massa euismod pretium. Cras a enim nibh. Nunc lectus urna, malesuada ac 
+        venenatis eget, tempor vel metus. Cras vulputate erat arcu, accumsan 
+        venenatis enim porttitor vel. Mauris tristique scelerisque nulla, non 
+        imperdiet purus cursus ac..</p>
+</div>
+
+<!-- Footer -->
+<div>
+    <h3>Potrebbero interessarti</h3>
+
+    <div class="image1">
+        <h2>Lorem ipsum dolor</h2>
+    </div>
+
+    <div class="image2">
+        <h2>Lorem ipsum dolor</h2>
+    </div>
+<!-- Fine footer -->
 
 </body>
 </html>
